--- a/Info.plist
+++ b/Info.plist
@@ -7,6 +7,7 @@
 	<key>Buffer Order</key>
 	<array>
 		<string>Main</string>
+		<string>Tile</string>
 	</array>
 	<key>Description</key>
 	<string>No description available</string>
