--- a/Info.plist
+++ b/Info.plist
@@ -8,6 +8,7 @@
 	<array>
 		<string>Main</string>
 		<string>Tile</string>
+		<string>Grid</string>
 	</array>
 	<key>Description</key>
 	<string>No description available</string>
