--- a/Info.plist
+++ b/Info.plist
@@ -10,6 +10,8 @@
 		<string>NestedGrid</string>
 		<string>Grid</string>
 		<string>Tile</string>
+		<string>Button</string>
+		<string>Menu</string>
 	</array>
 	<key>Description</key>
 	<string>No description available</string>
